// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls out live ballot sheets in test mode 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-iBPRYJ gplorY"
    >
      <div
        class="sc-fubCfw iqbrDX"
      >
        <div
          class="sc-pFZIQ McXrL"
        >
          <div
            class="sc-jrAGrp hkcHce"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-kEjbxe"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-iqHYGH eCkHsR"
        >
          <button
            class="sc-eCssSg czdiXU"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdfBwQ jA-DOsk"
    >
      <div
        class="sc-gsTCUz crfzwQ"
      >
        <div
          class="sc-kstrdz gkSOsj"
        >
          <div
            class="sc-dlfnbm ddzYNI"
          >
            <div
              class="sc-bqyKva dufLne"
            >
              Live Ballot
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <p>
              Remove the LIVE ballot before continuing.
            </p>
          </div>
          <div
            class="sc-hBEYos IeiLU"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`calls out test ballot sheets in live mode 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-iBPRYJ gplorY"
    >
      <div
        class="sc-fubCfw iqbrDX"
      >
        <div
          class="sc-pFZIQ McXrL"
        >
          <div
            class="sc-jrAGrp hkcHce"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-kEjbxe"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-iqHYGH eCkHsR"
        >
          <button
            class="sc-eCssSg czdiXU"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdfBwQ jA-DOsk"
    >
      <div
        class="sc-gsTCUz crfzwQ"
      >
        <div
          class="sc-kstrdz gkSOsj"
        >
          <div
            class="sc-dlfnbm ddzYNI"
          >
            <div
              class="sc-bqyKva dufLne"
            >
              Test Ballot
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <p>
              Remove the TEST ballot before continuing.
            </p>
          </div>
          <div
            class="sc-hBEYos IeiLU"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`says the ballot sheet is blank if it is 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-iBPRYJ gplorY"
    >
      <div
        class="sc-fubCfw iqbrDX"
      >
        <div
          class="sc-pFZIQ McXrL"
        >
          <div
            class="sc-jrAGrp hkcHce"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-kEjbxe"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-iqHYGH eCkHsR"
        >
          <button
            class="sc-eCssSg fEkUoC"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdfBwQ jA-DOsk"
    >
      <div
        class="sc-gsTCUz crfzwQ"
      >
        <div
          class="sc-kstrdz gkSOsj"
        >
          <div
            class="sc-dlfnbm ddzYNI"
          >
            <div
              class="sc-bqyKva dufLne"
            >
              Unknown Reason
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-eCssSg bFFZjC"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballow with issue which could not be determined.
              <br />
              <button
                class="sc-eCssSg bFFZjC"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-hBEYos IeiLU"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`says the ballot sheet is overvoted if it is 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-iBPRYJ gplorY"
    >
      <div
        class="sc-fubCfw iqbrDX"
      >
        <div
          class="sc-pFZIQ McXrL"
        >
          <div
            class="sc-jrAGrp hkcHce"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-kEjbxe"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-iqHYGH eCkHsR"
        >
          <button
            class="sc-eCssSg fEkUoC"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdfBwQ jA-DOsk"
    >
      <div
        class="sc-gsTCUz crfzwQ"
      >
        <div
          class="sc-kstrdz gkSOsj"
        >
          <div
            class="sc-dlfnbm ddzYNI"
          >
            <div
              class="sc-bqyKva dufLne"
            >
              Overvote
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-eCssSg bFFZjC"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballot sheet with an
               
              <strong>
                overvote
              </strong>
              .
              <br />
              <button
                class="sc-eCssSg bFFZjC"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-hBEYos IeiLU"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`says the sheet is unreadable if it is 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-iBPRYJ gplorY"
    >
      <div
        class="sc-fubCfw iqbrDX"
      >
        <div
          class="sc-pFZIQ McXrL"
        >
          <div
            class="sc-jrAGrp hkcHce"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-kEjbxe"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-iqHYGH eCkHsR"
        >
          <button
            class="sc-eCssSg fEkUoC"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdfBwQ jA-DOsk"
    >
      <div
        class="sc-gsTCUz crfzwQ"
      >
        <div
          class="sc-kstrdz gkSOsj"
        >
          <div
            class="sc-dlfnbm ddzYNI"
          >
            <div
              class="sc-bqyKva dufLne"
            >
              Unreadable
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-eCssSg bFFZjC"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm sheet was reviewed by the Resolution Board and tabulate as 
              <strong>
                unreadable
              </strong>
              .
              <br />
              <button
                class="sc-eCssSg bFFZjC"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-hBEYos IeiLU"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
